--- a/css/main.css
+++ b/css/main.css
@@ -958,6 +958,108 @@ position: relative;
 	height: 30px;
 	margin: 20px 20px 20px 20px;
 }
+
+.contacts{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-width: 100vw;
+}
+.contacts-tiitle{
+	margin-top: 80px;
+	position: relative;
+	font-size: 36px;
+	color: rgb(97, 97, 97);
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: center;
+
+}
+.contacts-tiitle:after {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	content: 'звони';
+	text-transform: uppercase;
+	font-size: 140px;
+	color: rgba(97, 97, 97, 0.149);
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: center;
+	position: absolute;
+	top: -0.5em;
+	left: -0.5em;
+}
+.contacts-container{
+	width: 100%;
+	flex: 3 3 350px;
+	margin-top: 60px;
+	display:flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	position: relative;
+
+}
+.contacts-img-container{
+	flex:2 2 550px;
+	margin-left: 5%;
+}
+.contacts-elemants{
+	display: flex;
+	flex-direction: column;
+}
+.contacts-elemant{
+	display: flex;
+	align-items: center;
+	margin-bottom: 10px;
+
+}
+.contacts-img{
+	width:90%;
+}
+.contacts-elemant-img,.contacts-elemant-img-whotsapp,.contacts-elemant-img-viber{
+	margin-right: 15px;
+}
+.contacts-social{
+	margin-top:50px;
+	align-self: flex-end;
+	display: flex;
+    align-items: flex-start;
+}
+.contacts-elemant P{
+	font-size: 18px;
+}
+.footer{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-width: 100vw;
+	background-color: #222;
+	color:#FFFFFF;
+}
+.footer-container-descr-col-link{
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 14px;
+	margin: 0;
+}
+.footer-container-descr-col-text{
+	margin-top: 3px;
+	margin-bottom: 3px;
+}
+.footer-container{
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+.footer-container-logo{
+	justify-self: flex-start;
+}
+
+
+
 .up-button {
 	position: fixed;
 	right: 10px;
@@ -1107,6 +1209,16 @@ position: relative;
 	color:#f79725;
 }
 @media (max-width: 1015px){
+
+	.contacts-container{
+		width: 90%;
+	}
+	.contacts-img-container{
+		margin-left: 0;
+	}
+	.contacts-social{
+		margin-top: 0;
+	}
 	.work-img-container{
 		margin-top: 20px;
 		margin-left: 0;
@@ -1236,6 +1348,21 @@ position: relative;
 
 
 @media (max-width: 768px){
+	.contacts-img-container{
+		transform: translateX(-40%);
+	}
+	.contacts-img{
+		width: 120%;
+		height: 120%;
+	}
+	.service-card{
+		margin-left: 4px;
+		margin-right: 4px;
+	}
+	.contacts .contact-social_iicon{
+		margin-left: 10px;
+		margin-right: 10px;
+	}
 	.bads-icon{
 		height: 50px;
 	}
@@ -1270,19 +1397,26 @@ position: relative;
 		margin-top: 5px;
 		font-size: 14px;
 	}
-	.bads-tiitle,.brands-tiitle{
-		font-size: 24px;
+	.about-section-text-tiitle:after, .services-tittle:after,.contacts-tiitle:after,.work-tittle:after,.bads-tiitle:after{
+		font-size: 100px;
+		left:-2rem;
 	}
-	.bads-tiitle:after{
-		font-size: 80px;
+	.about-section-text-tiitle, .services-tittle,.bads-tiitle,.brands-tiitle,.contacts-tiitle,.work-tittle{
+		font-size: 32px;
 	}
-.work-tittle{
-	margin-left: 10%;
-	font-size: 24px;
+	.work-tittle{
+	margin-left: 5%;
 	margin-bottom: 35px;
 }
-.work-tittle:after{
-	font-size: 80px;
+.contacts-container{
+	margin-top: 20px;
+}
+.services-tittle{
+	margin-top: 20px;
+}
+.contacts-tiitle{
+	margin-left: 5%;
+	text-align: left;
 }
 	.mouse-scroll{
 		display: none;
@@ -1319,16 +1453,36 @@ position: relative;
 	.services{
 		margin-top:30px;
 	}
-.about-section-text-tiitle, .services-tittle{
-	font-size: 24px;
-}
-.about-section-text-tiitle:after, .services-tittle:after{
-	font-size:80px;
-}
+
 }
 @media (max-width:576px){
-	.bads-tiitle:after{
-		letter-spacing: -4pt;
+	.contacts-img-container{
+		transform: translateX(-60%);
+	}
+	.contacts-img{
+		width: 160%;
+		height: 160%;
+	}
+	.contacts-container p{
+		font-size: 16px;
+	}
+	.work{
+		margin-top: 30px;
+	}
+	.about-section-text-tiitle:after, .services-tittle:after,.contacts-tiitle:after,.work-tittle:after,.bads-tiitle:after{
+		font-size: 60px;
+		left:0rem;
+	}
+	.about-section-text-tiitle, .services-tittle,.bads-tiitle,.brands-tiitle,.contacts-tiitle,.work-tittle{
+		font-size: 24px;
+		text-align: left;
+	}
+	.brands-tiitle{
+		margin-left: 5%;
+	}
+	.services-tittle{
+		margin-left: 5%;
+		margin-bottom: 30px;
 	}
 	.work-container{
 		margin-left:0;
@@ -1361,8 +1515,6 @@ position: relative;
 	}
 	.servise-text-descr{
 display: none;
-
-
 	}
 	.service-text{
 		margin-top:0;
@@ -1399,6 +1551,7 @@ display: none;
 	}
 	.about-section-text-tiitle:after, .services-tittle:after{
 		font-size:60px;
+		left:0;
 	}
 	.form-label{
 		font-size: 14px;
@@ -1462,10 +1615,7 @@ display: none;
 .about-section{
 	margin-bottom: 30px;
 }
-.services-tittle{
-	margin-left: 30px;
-	margin-bottom: 30px;
-}
+
 
 .social-bg {
 	padding: 9px;
